--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 pymobiledevice3 = "^4.14.16"
+pydantic = "^2.9.2"
+pyzmq = "^26.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pdoc3 = "^0.11.1"
