--- a/core/pytest.ini
+++ b/core/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 addopts = --ignore=core
-asyncio_mode=auto
-asyncio_default_fixture_loop_scope="function"
-log_cli=true
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
+log_cli = true
