--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -17,6 +17,7 @@ pdoc3 = "^0.11.1"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
+pytest-mock = "^3.14.0"
 coverage = "^7.6.4"
 
 [build-system]
