--- a/core/pytest.ini
+++ b/core/pytest.ini
@@ -3,3 +3,5 @@ addopts = --ignore=core
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
 log_cli = true
+markers =
+    requires_sudo: mark test as requiring sudo permissions
