test(core): marker for tests that require a real device connected

--- a/core/pytest.ini
+++ b/core/pytest.ini
@@ -5,3 +5,4 @@ asyncio_default_fixture_loop_scope = function
 log_cli = true
 markers =
     requires_sudo: mark test as requiring sudo permissions
+    real_device: mark test as requiring a real device
