chore(core): convenience script to execute tests

--- a/core/pytest.ini
+++ b/core/pytest.ini
@@ -2,7 +2,7 @@
 addopts = --ignore=core
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
-log_cli = true
+log_cli = false
 markers =
     requires_sudo: mark test as requiring sudo permissions
     real_device: mark test as requiring a real device
