--- a/core/.gitignore
+++ b/core/.gitignore
@@ -9,6 +9,9 @@ __pycache__/
 # Distribution / packaging
 .Python
 build/
+!core/build/
+!tests/unit/build/
+!tests/integration/build/
 develop-eggs/
 dist/
 downloads/
