--- a/core/pytest.ini
+++ b/core/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 addopts = --ignore=core
 asyncio_mode = auto
-asyncio_default_fixture_loop_scope = function
+asyncio_default_fixture_loop_scope = session
 log_cli = false
 markers =
     requires_sudo: mark test as requiring sudo permissions
