--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -15,6 +15,7 @@ mmh3 = "^5.0.1"
 [tool.poetry.group.dev.dependencies]
 pdoc3 = "^0.11.1"
 black = "^24.10.0"
+datamodel-code-generator = "^0.26.4"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
