test(core): fix codesign issues when changing build dir parent permissions
* Not sure what's going on but sometimes when rebuilding the project for testing it messes up the code signature of the test app bundle. It's not consistent as one or multiple builds work fine. For now it seems keeping a git tracked build parent dir is the way to go. This way we don't have to create a new dir and change permission during tests.

* NOTE: For now it seems that the codesign issues are related to the change of permission and that sudo creates the dir...if this regresses we need to take a closer look.

--- a/core/.gitignore
+++ b/core/.gitignore
@@ -12,7 +12,8 @@ build/
 !core/build/
 !tests/unit/build/
 !tests/integration/build/
-tests/test_data/build_output_dir
+tests/test_data/build_output_dir/*
+!tests/test_data/build_output_dir/.gitkeep
 develop-eggs/
 dist/
 downloads/
