--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -11,6 +11,7 @@ pymobiledevice3 = "^4.14.16"
 pydantic = "^2.9.2"
 pyzmq = "^26.2.0"
 mmh3 = "^5.0.1"
+xmltodict = "^0.14.2"
 
 [tool.poetry.group.dev.dependencies]
 pdoc3 = "^0.11.1"
