--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
-core = { path = "../core/", develop = true }
+core = { path = "../core/", develop = false }
 fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
 
