--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.13"
 core = { path = "../core/", develop = false }
 fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
+sqlmodel = "^0.0.22"
 
 
 [build-system]
