--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -11,6 +11,7 @@ core = { path = "../core/", develop = false }
 fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
 sqlmodel = "^0.0.22"
+alembic = "^1.14.0"
 
 
 [build-system]
