--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -13,6 +13,10 @@ uvicorn = "^0.32.0"
 sqlmodel = "^0.0.22"
 alembic = "^1.14.0"
 
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.3"
+pytest-mock = "^3.14.0"
+coverage = "^7.6.4"
 
 [build-system]
 requires = ["poetry-core"]
