--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -17,6 +17,7 @@ alembic = "^1.14.0"
 pytest = "^8.3.3"
 pytest-mock = "^3.14.0"
 coverage = "^7.6.4"
+pytest-asyncio = "^0.25.2"
 
 [build-system]
 requires = ["poetry-core"]
