--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
 sqlmodel = "^0.0.22"
 alembic = "^1.14.0"
+apscheduler = "^3.11.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
