--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -13,6 +13,8 @@ uvicorn = "^0.32.0"
 sqlmodel = "^0.0.22"
 alembic = "^1.14.0"
 apscheduler = "^3.11.0"
+aiosqlite = "^0.20.0"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
